# Ano2Semestre2

./: README.md
AC2/: todo.txt  toget.txt
AC2/Questoes_Teoricas/: ex19.s
AC2/praticas/: utils.c
AlgC/bibliografia/ex/: CMakeLists.txt  main.c
AlgC/bibliografia/ex/DataStructuresAndAlgorithmAnalysisInC/: chapter1.c  chapter2.c
AlgC/bibliografia/ex/DataStructuresAndAlgorithmAnalysisInC/Chapter3/: List.c  List.h  Polynomial.c
AlgC/bibliografia/ex/Tests/: T32018.c
AlgC/praticas/: AlgC Guião das Práticas 2020 04 - Cópia.docx  AlgC Guião das Práticas 2020 04.docx  (+2 more)
AlgC/praticas/cpp/: CMakeLists.txt
AlgC/praticas/cpp/TAD6b/: Graph.c  Graph.h  GraphBFSWithQueue.c  GraphBellmanFord.c  GraphBellmanFord.h  GraphDFSRec.c  GraphDFSRec.h  GraphDFSWithStack.c  GraphDFSWithStack.h  GraphDijkstra.c  GraphDijkstra.h  GraphShortestPathsWithQueue.c  IntegersQueue.h  Makefile  PriorityQueue.c  PriorityQueue.cpp  PriorityQueueTest.c  PriorityQueueTest.cpp  README.txt  example3.c
AlgC/praticas/cpp/aula10/TAD4/: BSTree.cpp  BSTree.h  BSTreeTest.cpp  SchedulingSequence.cpp  SchedulingSequence.h  TAD4Test.cpp  Time.cpp  TimeInterval.cpp  TimeInterval.h
AlgC/praticas/cpp/aula11/: FileMerge.cpp  FileReader.cpp  MinHeap.cpp  MinHeapTest.cpp
AlgC/praticas/cpp/aula12/: Graph.c  Graph.h  GraphBFSWithQueue.c  GraphBFSWithQueue.h  GraphDFSRec.c  GraphDFSWithStack.c  IntegersQueue.c  IntegersStack.c  IntegersStack.h  Makefile  PriorityQueue.h  SortedList.c  example1.c  example2.c
AlgC/praticas/cpp/aula8/TAD2/: Date.cpp  DateTest.cpp  DateTime.cpp  DateTime.h  DateTimeTest.cpp  Makefile  SchedulingSequence.cpp  SchedulingSequence.h  TAD2Test.cpp  Time.cpp  Time.h  TimeInterval.cpp  TimeTest.cpp
AlgC/praticas/cpp/aula9/TAD3/: Date.cpp  Date.h  DateTime.h  SchedulingSequence.cpp  SchedulingSequence.h  SortedList.cpp  SortedList.h  SortedListTest1.cpp  SortedListTest2.cpp  TAD3Test.cpp  TimeInterval.cpp
LFA/Praticas/: test  (+2 more)
(+501 files in other folders)
