cmake_minimum_required(VERSION 3.15)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp aula8/TAD2/DateTime.cpp aula8/TAD2/DateTime.h aula8/TAD2/Date.cpp aula8/TAD2/Date.h aula8/TAD2/Time.h aula8/TAD2/Time.cpp aula10/TAD4/TimeInterval.cpp aula10/TAD4/TimeInterval.h aula10/TAD4/SchedulingSequence.cpp aula10/TAD4/SchedulingSequence.h aula10/TAD4/TAD4Test.cpp aula10/TAD4/BSTree.cpp aula10/TAD4/BSTree.h)